# checkcopy

./: .gitignore  Makefile  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  configure.in.in  global.h  md5copy.c  progress-dialog.c  progress-dialog.h  ring-buffer-test.c  ring-buffer.c  ring-buffer.h  settings.h
po/: POTFILES.in  de.po
src/: Makefile.am  checkcopy-cancel.c  checkcopy-cancel.h  checkcopy-checksum-type.c  checkcopy-checksum-type.h  checkcopy-details-window.c  checkcopy-details-window.h  checkcopy-file-handler-base.c  checkcopy-file-handler-base.h  checkcopy-file-handler.c  checkcopy-file-handler.h  checkcopy-file-info.c  checkcopy-file-info.h  checkcopy-file-list.c  checkcopy-file-list.h  checkcopy-input-stream.c  checkcopy-input-stream.h  checkcopy-main.c  checkcopy-planner.c  checkcopy-planner.h  checkcopy-processor.c  checkcopy-processor.h  checkcopy-traversal.c  checkcopy-traversal.h  checkcopy-work-queue.c  checkcopy-work-queue.h  checkcopy-worker.c  checkcopy-worker.h  checkcopy.c  error.c  error.h  global.h  md5copy.c  mhash-fix.h  ompa-list.c  ompa-list.h  progress-dialog.c  progress-dialog.h  ring-buffer-test.c  ring-buffer.c  (+5 more)
test-input/c/: mohr
tests/: .gitignore  Makefile.am  checksum.c
tests/data/: CHECKSUM  checkcopy  data.sfv
