AC_COPYRIGHT([Copyright (c) 2008-2009 David Mohr <david@mcbf.net>])
AC_INIT([md5copy], [0.2], [david@mcbf.net])
AM_MAINTAINER_MODE

AC_PREREQ([2.61])
AC_CONFIG_SRCDIR([src/md5copy.c])
AC_CONFIG_AUX_DIR([build-aux])

PKG_CHECK_MODULES(PACKAGE, gtk+-2.0)

AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION, [-Wall 1.10.1 dist-bzip2])
AC_PROG_CC
AM_PROG_CC_C_O
AC_PROG_RANLIB
AC_C_CONST
AC_SUBST(CFLAGS)
AC_CONFIG_HEADERS([config.h])
AC_CHECK_HEADERS([string.h])
AC_CONFIG_FILES([
  Makefile
  src/Makefile
])
AC_OUTPUT
